--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals-reporter": "^1.0.0"
   },
   "scripts": {
